# glplayground

./: CMakeLists.txt
include/glad/: glad.c  glad.h
src/: base.cc  shaders.cc  vertices.cc
src/include/: glplayground.h  shaders.h  vertices.h
